--- a/homework-17/3-list/index.html
+++ b/homework-17/3-list/index.html
@@ -7,8 +7,7 @@
     <title>Document</title>
   </head>
   <body>
-    <div class="wrapper c-list">
-      <h2 class="c-list__title">list</h2>
+    <div class="l-wrapper c-list">
       <ul class="c-list__container">
         <li class="c-list__item">Wake up at 07:00.</li>
         <li class="c-list__item">Leave for a work at 08:30.</li>
