added render function

--- a/homework-18/3-books/index.html
+++ b/homework-18/3-books/index.html
@@ -14,17 +14,21 @@
       </form>
       <div class="error__message"></div>
     </div>
-    <table class="results">
-      <thead class="display__head">
-        <tr>
-          <th>Title</th>
-          <th>Author Name</th>
-          <th>First publish year</th>
-          <th>Subjects</th>
-        </tr>
-      </thead>
-      <tbody class="display__body"></tbody>
-    </table>
+    <div class="result__container">
+      <div class="pagination"></div>
+      <table class="results">
+        <thead class="display__head">
+          <tr>
+            <th>Title</th>
+            <th>Author Name</th>
+            <th>First publish year</th>
+            <th>Subjects</th>
+          </tr>
+        </thead>
+        <tbody class="display__body"></tbody>
+      </table>
+    </div>
+
     <script type="module" src="./index.js"></script>
   </body>
 </html>
