init-ed pagination

--- a/homework-18/3-book_re/index.html
+++ b/homework-18/3-book_re/index.html
@@ -39,6 +39,7 @@
       </form>
     </div>
     <div class="loading"></div>
+    <div class="pagination"></div>
     <script type="module" src="index.js"></script>
   </body>
 </html>
