--- a/homework-18/3-book_re/index.html
+++ b/homework-18/3-book_re/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./assets/style/stylle.css" />
+    <link rel="stylesheet" href="․/style/stylle.css" />
     <title>Document</title>
   </head>
   <body>
