finilizing all books 3rd exercise

--- a/homework-18/3-book_re/index.html
+++ b/homework-18/3-book_re/index.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="․/style/stylle.css" />
+    <link rel="stylesheet" href="./style/stylle.css" />
     <title>Document</title>
   </head>
   <body>
     <div class="form__wrapper">
-      <h2 class="form__title">Bookle</h2>
+      <h2 class="form__title">Boodle</h2>
       <form action="">
         <input type="text" name="" id="searchInput" />
         <button id="submitBtn" type="submit">
@@ -39,7 +39,9 @@
       </form>
     </div>
     <div class="loading"></div>
+    <div class="book__container"></div>
     <div class="pagination"></div>
+
     <script type="module" src="index.js"></script>
   </body>
 </html>
